[package]
name = "canvas"
version = "1.0.1"
authors = ["Marek Rogalski <mafikpl@gmail.com>"]
description = "2D Canvas API that streams all drawing commands to a connected browser."
repository = "https://github.com/mafik/canvas"

keywords = ["canvas", "2d", "draw", "render", "webcanvas"]
categories = ["rendering::graphics-api", "gui", "web-programming::websocket", "visualization", "api-bindings"]
license = "Apache-2.0"

[dependencies]
hyper = "0.11"
futures = "0.1"
websocket = "0.20"

[badges]
travis-ci = { repository = "mafik/canvas" }
appveyor = { repository = "mafik/canvas" }
is-it-maintained-issue-resolution = { repository = "mafik/canvas" }
is-it-maintained-open-issues = { repository = "mafik/canvas" }
coveralls = { repository = "mafik/canvas" }
